[package]
name = "rusty_store_management_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
crossterm = { version = "0.27.0", features = [ "serde" ] }
rand = { version = "0.8.5", default-features = false, features = ["std"] }
serde = {version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
termion = "2.0.3"
tui = { version =  "0.19.0", default-features = false, features = ['crossterm', 'serde'] }
